Hotfix: canceled delay() JS function only for checkForm() call, to avoid wrong check form process on other fields ---|--- canceled window load() jQuery event function for automatic scroll to form message boxes, to avoid bug on Safari browser  ---|--- canceled showNoticeMessage() JS function on other fields not to show errors message box again on client side ---|--- added delay() JS function in all files where it was necessary, to get the same behaviour on all forms ---|--- fixed Bootstrap contact and comment form integration to get the same dimensions on all forms

--- a/Web/assets/css/phpblog.css
+++ b/Web/assets/css/phpblog.css
@@ -385,9 +385,14 @@ form p.text-danger {
     border-color: rgba(255, 255, 255, 0.2) !important;
 }
 
+.section-contact-us .contact-form .input-group {
+    padding: 0;
+}
+
 .section-contact-us .contact-form .textarea-container,
 .textarea-container  {
     margin: 0 0 10px;
+    padding: 0;
 }
 
 .section-contact-us .contact-form .textarea-container.input-group .input-group-addon,
